--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
         <link rel="stylesheet" href="portfolio.css">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css?family=Blinker:400,700|Source+Sans+Pro&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/0f3bc4dbc5.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">        <script src="https://kit.fontawesome.com/0f3bc4dbc5.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <div class="banner">
@@ -23,7 +22,7 @@
         <div class="cards">
 
             <div class="card">
-                <div class="card-content">
+                <div class="card-content" style="min-height: 370px;">
                     <h3 class="card-title">React Rodent Data</h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
@@ -39,7 +38,7 @@
             </div>
              
             <div class="card">
-                <div class="card-content">
+                <div class="card-content "  style="min-height: 370px;">
                     <h3 class="card-title">The Good Exchange </h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
@@ -56,8 +55,8 @@
                 <img class="card-img" src="the2.png" alt="">
             </div>
 
-            <div class="card">
-                <div class="card-content">
+            <!-- <div class="card">
+                <div class="card-content"  style="min-height: 400px;">
                     <h3 class="card-title">LONACC Website for Africa Health Organisation</h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
@@ -69,12 +68,12 @@
                     </div>
                 </div>
                 <img class="card-img" src="lon.JPG" alt="">
-            </div>
+            </div> -->
 
             <div class="card">
-                <div class="card-content">
+                <div class="card-content " style="min-height: 310px;" >
                     <h3 class="card-title">WineMe Laravel/PHP/React Project</h3>
-                    <h4 class="card-title">Technology</h4>
+                    <h4 class="card-title" >Technology</h4>
                     <ul>
                         <li>React Fetching data from Laravel API, searchbar, data filter</li>
                         <li>Laravel/PHP/SQL - use of Eloquent relationships, adding reviews, working with migrations </li>                             
@@ -89,7 +88,7 @@
 
 
             <div class="card">
-                <div class="card-content">
+                <div class="card-content "  style="min-height: 310px;">
                     <h3 class="card-title">JavaScript Games</h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
