--- a/index.html
+++ b/index.html
@@ -209,7 +209,10 @@
                         <li>HTML</li>                            
                     </ul>
                     <div class="card-footer">
+                        <a href="https://adam-lnenicka.github.io/indonesian-css-site/" target="null" class="btn">Live Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/indonesian-css-site" target="null" class="btn">Source Code</a>
                     </div>
+                    
                 </div>
                 <img class="card-img" src="Capture-Indonesia.jpg" alt="">
             </div>
@@ -239,6 +242,8 @@
                         <li>HTML</li>                             
                     </ul>
                     <div class="card-footer">
+                        <a href="https://adam-lnenicka.github.io/paintball-site/" target="null" class="btn">Live Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/paintball-site" target="null" class="btn">Source Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Piantball.jpg" alt="">
